k8s/auth/authentik/overlays/dev/http-authentik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-authentik
  namespace: auth
spec:
  hostnames:
    - auth.apps.192-168-58-2.sslip.io
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
