k8s/auth/authentik/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-authentik
spec:
  hostnames:
    - auth.apps.192-168-58-2.sslip.io
